fix style issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ svg {
   border: 2px solid #fff;
   padding: 0.5rem 2rem;
   font-size: 24px;
+  color: #fff;
 }
 
 .button--submit{
@@ -197,6 +198,7 @@ svg {
 @media only screen and (max-width: 500px) {
     .about__bars{
         padding: 0 2rem;
+        overflow: hidden;
     }
   }
 
